--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,8 @@ $font-family-sans-serif: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, '
 $font-family-monospace: 'Source Code Pro', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-monospace;
 
+$font-size-base: 1.1rem;
+
 $font-weight-normal: 400;
 $font-weight-bold: 600;
 $font-weight-bolder: 700;
