--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-sm">
         <ul class="list-inline">
-          {% assign pages = site.pages | where: "is_footer_page", true | sort: 'position' %}
+          {% assign pages = site.pages | where: "is_footer", true | sort: 'position' %}
           {% for page in pages %}
           <li class="list-inline-item" style="padding: 8px;">
             <a href="{{ page.url | relative_url }}">{{ page.title }}</a>
