--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -31,6 +31,23 @@ layout: default
     {% endfor %}
   </ul>
 
+  <h1>Work</h1>
+
+  {% for work in site.work %}
+  <h2>{{ work.display_title | default: work.title }}</h2>
+  <a href="{{ work.link | relative_url }}">{{ work.link | remove: "http://" | remove: "https://" | remove: "www." }}</a>
+  <br/>
+  
+  {% for job in work.jobs %}
+
+  <strong>{{ job.title }}:</strong> {{ job.start_date | date: "%b %Y" | upcase }} -
+  {{ job.end_date | date: "%b %Y" | default: "Present" | upcase }}
+
+  {{ job.body | markdownify }}
+
+  {% endfor %}
+  {% endfor %}
+
   <h1>References</h1>
   
   <p>Available upon request</p>
