--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,69 +1,51 @@
 ---
-layout: default
+layout: page
 ---
 
-{% include header.html %}
+{{ content }}
 
-<div class="container">
+<h1>Skills</h1>
 
-  {{ content }}
+<ul>
+  {% for skill in page.skills %}
+  {% assign values = skill.values | map: 'skill' %}
 
-  <h1>Skills</h1>
-
-  <ul>
-    {% for skill in page.skills %}
-    {% assign values = skill.values | map: 'skill' %}
-
-    <li>
-      <strong>{{ skill.type }}:</strong> {{ values | join: ', ' }}
-    </li>
-    {% endfor %}
-  </ul>
-
-  <h1>Experience</h1>
-
-  <ul>
-    {% assign current = site.time | date: "%Y" %}
-    
-    {% for experience in page.experience %}
-    {% assign start = experience.start_date | date: "%Y" %}
-    <li>
-      <strong>{{ current | minus: start }}+ years:</strong> {{ experience.type }}
-    </li>
-    {% endfor %}
-  </ul>
-
-  <h1>Work</h1>
-
-  {% for work in site.work %}
-  <h2>{{ work.display_title | default: work.title }}</h2>
-  <a href="{{ work.link | relative_url }}">{{ work.link | remove: "http://" | remove: "https://" | remove: "www." }}</a>
-  <br/>
-  
-  {% for job in work.jobs %}
-
-  <strong>{{ job.title }}:</strong> {{ job.start_date | date: "%b %Y" | upcase }} -
-  {{ job.end_date | date: "%b %Y" | default: "Present" | upcase }}
-
-  {{ job.body | markdownify }}
-
+  <li>
+    <strong>{{ skill.type }}:</strong> {{ values | join: ', ' }}
+  </li>
   {% endfor %}
-  {% endfor %}
+</ul>
 
-  <h1>References</h1>
+<h1>Experience</h1>
+
+<ul>
+  {% assign current = site.time | date: "%Y" %}
   
-  <p>Available upon request</p>
+  {% for experience in page.experience %}
+  {% assign start = experience.start_date | date: "%Y" %}
+  <li>
+    <strong>{{ current | minus: start }}+ years:</strong> {{ experience.type }}
+  </li>
+  {% endfor %}
+</ul>
 
-	<p>
-    {% if page.action_button.link %}
-      {% if page.action_button.link contains "http" %}
-        {% assign button_target = "_blank" %}
-      {% else %}
-        {% assign button_target = "_self" %}
-      {% endif %}
-      <a href="{{ page.action_button.link | escape }}" class="button" target={{ button_target }}>{{ page.action_button.title }}</a>
-    {% endif %}
-  </p>
-</div>
+<h1>Work</h1>
 
-{% include footer.html %}
+{% for work in site.work %}
+<h2>{{ work.display_title | default: work.title }}</h2>
+<a href="{{ work.link | relative_url }}">{{ work.link | remove: "http://" | remove: "https://" | remove: "www." }}</a>
+<br/>
+
+{% for job in work.jobs %}
+
+<strong>{{ job.title }}:</strong> {{ job.start_date | date: "%b %Y" | upcase }} -
+{{ job.end_date | date: "%b %Y" | default: "Present" | upcase }}
+
+{{ job.body | markdownify }}
+
+{% endfor %}
+{% endfor %}
+
+<h1>References</h1>
+
+<p>Available upon request</p>
