--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           {% endfor %}
 
           <li class="list-inline-item" style="padding: 8px;">
-            <a href="{{ site.current_work.url }}">Current Work</a>
+            <a href="{{ site.current_work.url }}" target="_blank">Current Work</a>
           </li>
         </ul>
       </div>
