--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -33,8 +33,10 @@ layout: page
 
 {% for work in site.work %}
 <h2>{{ work.display_title | default: work.title }}</h2>
-<a href="{{ work.url | relative_url }}">{{ work.url | remove: "http://" | remove: "https://" | remove: "www." }}</a>
+{% if work.website %}
+<a href="{{ work.website }}" target="_blank">{{ work.website | remove: "http://" | remove: "https://" | remove: "www." }}</a>
 <br/>
+{% endif %}
 
 {% for job in work.jobs %}
 
