--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-  <link rel="icon" type="image/png" href="{{ "assets/favicon.png" | relative_url }}"> 
+  <link rel="icon" type="image/png" href="{{ "assets/images/favicon.png" | relative_url }}"> 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
   {% if jekyll.environment == 'production' and site.google_analytics.tracking_id %}
